--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -3,24 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Ana's Website</title>
 </head>
 <body>
     <header>
     <h1>Ana Ricardo</h1>
     </header>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="notes.html">Notes</a>
+            </li>
+        </ul>
+    </nav>
     <main>
         <article>
-            <h3>About Me</h3>
+            <h2>About Me</h2>
         </article>
+        <img src="images/ana-photo.jpg" alt="Ana Ricardo Photo" width="250" height="550">
         <p>Hi! My name is Ana. <strong>I was born and raised in Dominican Republic.</strong> I have a degree in Advertising Arts. I love arts and marketing. <em>I Love to communicate through ads, love to do marketing strategies for social media <abbr title="social media">SM</abbr> and offline advertisements.</em> I live in Canada with my husband. He is a Graphic Designer. We have been married since September 20<sup>th</sup>, 2022.</p>
 
         <p>In my free time I like to watch movies and shows, hangout with my friends, family and husband, listening to music, play video games. My favorite video game is Unravel, because I can play it with my husband whenever I want to. It is a game where two people must play, it is team game.</p>
+        <header>
+            <h3>My hobbies</h3>
+        </header>
+        <ul>
+            <li>Watch series</li>
+            <li>Listening to music</li>
+        </ul>
     </main>
     <Blockquote>
-        <q>Be who you are and say what you feel, because those who mind don't matter, and those who matter don't mind.</q>
+        Be who you are and say what you feel, because those who mind don't matter, and those who matter don't mind.
+            <cite>-Bernard M. Baruch</cite>
     </Blockquote>
-    <cite>-Bernard M. Baruch</cite>
-    <footer>Copyright 2024</footer>
+    <footer><em>Ana Ricardo - Copyright 2024</em></footer>
 </body>
 </html>
