Styling the HTML Website

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ana's Website</title>
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -22,13 +23,18 @@
     <header>
         <h4>Here are 5 HTML tags I've learnt and their descriptions.</h4>
     </header>
-    <ul>
-        <li><strong>Tag p /p:</strong> This one is used for adding a parapgraph.</li>
-        <li><strong>Tag em /em:</strong> This one is used for emphatized text. When we use this tag the text is displayed in <em>italic.</em></li>
-        <li><strong>Tag sup /sup:</strong> This one is used for superscript text, like ordinal numbers (3<sup>o</sup>).</li>
-        <li><strong>Tag blockquote /blockquote:</strong> This one is used to cite a quote from another source.</li>
-        <li><strong>Tag strong /strong:</strong> This one is another way to emphatized an important text. When we use this tag the text is displayed in <strong>bold.</strong></li>
-    </ul>
+    <dl>
+        <dt><strong>Tag p /p:</strong></dt>
+        <dd>This one is used for adding a parapgraph.</dd>
+        <dt><strong>Tag em /em:</strong></dt>
+        <dd>This one is used for emphatized text. When we use this tag the text is displayed in <em>italic.</em></dd>
+        <dt><strong>Tag sup /sup:</strong></dt>
+        <dd>This one is used for superscript text, like ordinal numbers (3<sup>o</sup>).</dd>
+        <dt><strong>Tag blockquote /blockquote:</strong></dt>
+        <dd>This one is used to cite a quote from another source.</dd>
+        <dt><strong>Tag strong /strong:</strong></dt>
+        <dd>This one is another way to emphatized an important text. When we use this tag the text is displayed in <strong>bold.</strong></dd>
+    </dl>
     <footer><em>Ana Ricardo - Copyright 2024</em></footer>
 </body>
 </html>
