--- a/final-project/about-us.html
+++ b/final-project/about-us.html
@@ -11,38 +11,53 @@
     <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-    <nav> <!-- Add black background and yellow color fonts and hover in yellow with black font and light weight -->
-        <img src="images/logo.png" alt="Logo Three Star Media">
-        <ul>
-            <li>
-                <a class="home" href="index.html">Home</a>
-            </li>
-            <li>
-                <a class="about-us" href="about-us.html">About Us</a>
-            </li>
-            <li>
-                <a class="services" href="services.html">Services</a>
-            </li>
-            <li>
-                <a class="team" href="team.html">Team</a>
-            </li>
-            <li>
-                <a class="contact" href="contact.html">Contact</a>
-            </li>
-        </ul>
-    </nav> <!-- Navigation bar background is black and yellow for the font color -->
-    <form action="search-box" method="post">
-        <input type="search" id="search" name="search">
-        <button class="btn-search" type="button">
-            <i class="fa-solid fa-magnifying-glass"></i> <!-- Change color of Icon decoration to yellow and add border -->
-        </button>
-    </form>
-    <br>
-    <section class="about-us"> <!-- Add a yellow background to this section -->
-        <img src="images/about-us.jpg" alt="About Us">
+    <div class="menuwrapper">
+        <div class="menu">
+            <nav>
+                <!-- Add black background and yellow color fonts and hover in yellow with black font and light weight -->
+                <img class="logo" src="images/logo.png" alt="Logo Three Star Media">
+                <ul>
+                    <li>
+                        <a class="home" href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a class="about-us" href="about-us.html">About Us</a>
+                    </li>
+                    <li>
+                        <a class="services" href="services.html">Services</a>
+                    </li>
+                    <li>
+                        <a class="team" href="team.html">Team</a>
+                    </li>
+                    <li>
+                        <a class="contact" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </nav> <!-- Navigation bar background is black and yellow for the font color -->
+            <form class="search" action="search-box" method="get">
+                <div class="searchwrapper">
+                <input class="searchbar" type="search" id="search" name="search" placeholder="Search">
+               <a href="#"><button class="btn-search" type="button">
+                    <i class="fa-solid fa-magnifying-glass"></i></a>
+                    <!-- Change color of Icon decoration to yellow and add border -->
+                </button>
+            </div>
+            </form>
+        </div>
+        </div>
+    </div>
+    <section class="aboutussec">
+        <!-- Add a yellow background to this section -->
+        <img class="aboutimg" src="images/about-us.jpg" alt="About Us">
+        <div class="aboutwrapper">
         <h2>About Us</h2>
-        <p class="aboutus">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni odio cum laborum labore accusamus nulla beatae quo illo perspiciatis, facilis tempora debitis sunt voluptatibus quis, deserunt vel numquam magnam molestiae.</p>
-        <p class="aboutus">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex a cumque laborum exercitationem quis animi error minus? Provident repellat optio cupiditate, tenetur ipsam distinctio minus eveniet cum ducimus, expedita consequatur!</p>
+        <p class="aboutus">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni odio cum laborum labore
+            accusamus nulla beatae quo illo perspiciatis, facilis tempora debitis sunt voluptatibus quis, deserunt
+            vel numquam magnam molestiae.</p>
+        <p class="aboutus">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex a cumque laborum
+            exercitationem quis animi error minus? Provident repellat optio cupiditate, tenetur ipsam distinctio
+            minus eveniet cum ducimus, expedita consequatur!</p>
+        </div>
     </section>
     <footer class="footer"> <!-- Add a black background and yellow fonts -->
         <p>&copy; Copyright Three Star Media, 2020</p>
